--- a/workshop2/package.json
+++ b/workshop2/package.json
@@ -15,8 +15,15 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-restify-mongoose": "^5.0.0",
+    "io": "^1.0.0",
     "jquery": "^3.3.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.4.0",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "mocha": "^5.2.0"
   }
 }
