--- a/workshop2/package.json
+++ b/workshop2/package.json
@@ -17,6 +17,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-restify-mongoose": "^5.0.0",
+    "helmet": "^3.15.0",
     "io": "^1.0.0",
     "jquery": "^3.3.1",
     "method-override": "^3.0.0",
